fix spacing issues with body
added align-items: center to body in css.
added additional flex parameters to content.

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
     flex-direction: column;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     background-color: #1f2937;
+    align-items: center;
 }
 
 h1 {
@@ -18,6 +19,10 @@ p {
     font-size:medium;
     color: rgb(226, 226, 226);
     margin: 0px;
+}
+
+img {
+    border-radius: 20px;
 }
 
 ul {
@@ -63,9 +68,9 @@ button.border {
 
 .header {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-
+    width: 960px;
 }
 
 .logo {
@@ -78,10 +83,15 @@ button.border {
 .container {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     color: white;
+    width: 960px;
 }
 
 .container.white {
     background-color: white;
+}
+
+.content {
+    max-width: 960px;
 }
